--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
           <a href="privacy-terms.html">Terms of Service</a>
         </div>
         <p class="footer-credit">
-          Site Design by <a href="https://alectronic-solutions.github.io/home/" target="_blank">Alectronic Solutions</a>
+          Site Design by <a href="https://alectronic-solutions.github.io/" target="_blank">Alectronic Solutions</a>
         </p>
       </div>
     </div>
