--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport"="width=device-width, initial-scale=1.0">
   <title>Coastal Horizon Hotel</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -12,20 +12,27 @@
 <body>
   <!-- Header -->
   <header>
-    <div class="logo">
-      <img src="images/logo.png" alt="Coastal Horizon Hotel Logo">
+    <div class="container">
+      <div class="logo">
+        <img src="images/logo.png" alt="Coastal Horizon Hotel Logo">
+      </div>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#rooms">Rooms & Suites</a></li>
+          <li><a href="#amenities">Amenities</a></li>
+          <li><a href="#offers">Special Offers</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+          <li><a href="#contact">Book Now</a></li>
+        </ul>
+        <div class="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+      </nav>
     </div>
-    <nav>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#rooms">Rooms & Suites</a></li>
-        <li><a href="#amenities">Amenities</a></li>
-        <li><a href="#offers">Special Offers</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
-        <li><a href="#contact">Book Now</a></li>
-      </ul>
-    </nav>
   </header>
 
   <!-- Hero Section -->
@@ -467,7 +474,7 @@
           <a href="privacy-terms.html">Terms of Service</a>
         </div>
         <p class="footer-credit">
-          Site Design by <a href="https://alectronic-solutions.github.io/home/" target="_blank">Alectronic Solutions</a>
+          Site Design by <a href="https://alectronic-solutions.github.io/" target="_blank">Alectronic Solutions</a>
         </p>
       </div>
     </div>
