--- a/privacy-terms.html
+++ b/privacy-terms.html
@@ -113,19 +113,26 @@
 <body>
   <!-- Header -->
   <header>
-    <div class="logo">
-      <img src="images/logo.png" alt="Coastal Horizon Hotel Logo">
+    <div class="container">
+      <div class="logo">
+        <img src="images/logo.png" alt="Coastal Horizon Hotel Logo">
+      </div>
+      <nav>
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="index.html#about">About Us</a></li>
+          <li><a href="index.html#rooms">Rooms & Suites</a></li>
+          <li><a href="index.html#amenities">Amenities</a></li>
+          <li><a href="index.html#offers">Special Offers</a></li>
+          <li><a href="index.html#contact">Book Now</a></li>
+        </ul>
+        <div class="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+      </nav>
     </div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="index.html#about">About Us</a></li>
-        <li><a href="index.html#rooms">Rooms & Suites</a></li>
-        <li><a href="index.html#amenities">Amenities</a></li>
-        <li><a href="index.html#offers">Special Offers</a></li>
-        <li><a href="index.html#contact">Book Now</a></li>
-      </ul>
-    </nav>
   </header>
 
   <!-- Privacy Policy & Terms of Service Section -->
@@ -353,7 +360,7 @@
           <a href="privacy-terms.html">Terms of Service</a>
         </div>
         <p class="footer-credit">
-          Site Design by <a href="https://alectronic-solutions.github.io/home/" target="_blank">Alectronic Solutions</a>
+          Site Design by <a href="https://alectronic-solutions.github.io/" target="_blank">Alectronic Solutions</a>
         </p>
       </div>
     </div>
